--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
+    "i": "^0.3.7",
+    "install": "^0.13.0",
     "mongodb": "^6.10.0",
-    "mongodb-memory-server": "^10.1.2"
+    "mongodb-memory-server": "^10.1.2",
+    "npm": "^10.9.0"
   },
   "scripts": {
     "watch": "tsc -w",
@@ -18,6 +22,7 @@
     "jest:coverage": "jest -i --coverage"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.13",
