--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "license": "MIT",
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/nodemailer": "^6.4.17",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
@@ -15,7 +17,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.10.0",
     "mongodb-memory-server": "^10.1.2",
-    "npm": "^10.9.0"
+    "nodemailer": "^6.9.16",
+    "npm": "^10.9.0",
+    "uuid": "^11.0.3"
   },
   "scripts": {
     "watch": "tsc -w",
