--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,10 @@
 {
-
   "version": 2,
-
   "name": "express",
-
   "builds": [
-
-    { "src": "src/index.js", "use": "@vercel/node" }
-
+    { "src": "src/index.ts", "use": "@vercel/node" }
   ],
-
   "routes": [
-
-    { "src": "/(.*)", "dest": "src/index.js" }
-
+    { "src": "/(.*)", "dest": "src/index.ts" }
   ]
-
 }
