--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.10.0",
     "mongodb-memory-server": "^10.1.2",
+    "mongoose": "^8.9.0",
     "nodemailer": "^6.9.16",
     "npm": "^10.9.0",
     "uuid": "^11.0.3"
