--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "express-validator": "^7.2.0",
     "i": "^0.3.7",
     "install": "^0.13.0",
+    "inversify": "^6.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.10.0",
     "mongodb-memory-server": "^10.1.2",
     "mongoose": "^8.9.0",
     "nodemailer": "^6.9.16",
     "npm": "^10.9.0",
+    "reflect-metadata": "^0.2.2",
     "uuid": "^11.0.3"
   },
   "scripts": {
